--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "compile": "yarn typed-scss-modules components --nameFormat dashes"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.1",
     "next": "12.3.0",
     "react": "18.2.0",
